[tool.poetry]
name = "robox-transfer-poc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.9.1"
webdriver-manager = "^3.8.6"
python-dotenv = "^1.0.0"
pydantic = "^1.10.8"
loguru = "^0.7.0"
aiohttp = "^3.8.4"
selenium-wire = "^5.1.0"
pika = "^1.3.2"
asyncpg = "^0.27.0"
nest-asyncio = "^1.5.6"
msgpack = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
